[package]
name = "astroslash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1"
winit = { version = "0.30.4", features = ["rwh_05"] }
env_logger = "0.11.3"
log = "0.4"
wgpu = "22.0.0"
wasm-bindgen = "0.2.92"
web-sys = "0.3.69"
wasm-bindgen-futures = "0.4.42"
pollster = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "22.0.0", features = ["webgl", "wgsl"]}
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = ["Document", "Element", "Window", "console", "HtmlCanvasElement", "HtmlCollection"] }

[lib]
crate-type = ["cdylib", "rlib"]
