[package]
name = "astroslash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1"
winit = { version = "0.30.5", features = ["rwh_05"] }
env_logger = "0.11.5"
log = "0.4.22"
wgpu = { version = "23.0.0", features = ["webgl", "wgsl"] }
wasm-bindgen = "0.2.95"
web-sys = { version = "0.3.72", features = [
  "Document",
  "Element",
  "Window",
  "console",
  "HtmlCanvasElement",
  "HtmlCollection",
] }

wasm-bindgen-futures = "0.4.45"
pollster = "0.4.0"
bytemuck = { version = "1.19.0", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
# these features only needed for wasm but good to have for lsp
# wgpu = {features = ["webgl", "wgsl"]}
# web-sys = { features = [
#   "Document",
#   "Element",
#   "Window",
#   "console",
#   "HtmlCanvasElement",
#   "HtmlCollection",
# ]}
#

[dependencies.image]
version = "0.25.2"
default-features = false
features = ["png", "jpeg"]

[workspace]
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]
